[project]
name = "pyax"
version = "0.3.0"
description = "Client library for macOS accessibility"
authors = [
  { name="Eitan Isaacson", email="eitan@monotonous.org" },
]
license = "MIT"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Intended Audience :: Developers",
    "Operating System :: MacOS :: MacOS X",
]
dependencies = [
    "pyobjc-framework-ApplicationServices>=10.1",
    "typer>=0.20.0",
]

[project.optional-dependencies]
highlight = [
    "PyQt6>=6.9.0",
]

[project.scripts]
"pyax" = "pyax.__main__:app"

[project.urls]
"Homepage" = "https://github.com/eeejay/pyax"
"Bug Tracker" = "https://github.com/eeejay/pyax/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.sdist]
exclude = [
  "*.gif",
  ".gitignore",
]